# timertool-rs

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: release.yml  rust.yml
src/: error.rs  install.rs  logger.rs  macros.rs  main.rs  standby.rs  timer.rs  win_elevated.rs
src/task_scheduler/: action.rs  error.rs  mod.rs  principal.rs  registered_task.rs  task_definition.rs  task_folder.rs  task_registration_info.rs  task_service.rs  task_settings.rs  trigger.rs
src/utils/: mod.rs  start_args.rs  win_elevated.rs
