[package]
name = "timerset"
version = "0.2.0"
authors = ["Mathieu Amiot <amiot.mathieu@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
paw = "1.0"
structopt = { version = "0.3", default-features = false, features = ["paw"] }
winreg = "0.7"
ntapi = "0.3"

[dependencies.winapi]
version = "0.3"
features = ["ntdef", "handleapi", "processthreadsapi", "winnt", "securitybaseapi", "impl-default"]

[profile.release]
lto = true
codegen-units = 1
