[package]
name = "timerset"
version = "0.3.0"
authors = ["Mathieu Amiot <amiot.mathieu@gmail.com>"]
edition = "2018"

[package.metadata.winres]
OriginalFileName = "TimerSet.exe"
LegalCopyright = "Copyright Mathieu Amiot © 2020"

[features]
loggity-log = []
default = []

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
paw = "1.0"
winreg = "0.7"

[dependencies.structopt]
version = "0.3"
default-features = false
features = ["paw"]

[dependencies.ntapi]
version = "0.3"
default-features = false
features = ["user"]

[dependencies.winapi]
version = "0.3"
default-features = false
features = [
    "ntdef", "sysinfoapi", "handleapi", "processthreadsapi", "memoryapi",
    "synchapi", "winnt", "objbase", "combaseapi", "taskschd", "securitybaseapi",
    "wtypesbase", "rpcdce", "wtypes", "oaidl", "oleauto",
]

[build-dependencies]
winres = "0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
