[package]
name = "timerset"
version = "0.4.1"
authors = ["Mathieu Amiot <amiot.mathieu@gmail.com>"]
edition = "2021"

[package.metadata.winres]
OriginalFileName = "TimerSet.exe"
LegalCopyright = "Copyright Mathieu Amiot © 2020"

[features]
loggity-log = []
default = []

[dependencies]
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
clap = { version = "3.0", features = ["derive"] }
thiserror = "1.0"
eyre = "0.6"
time = { version = "0.3", features = ["formatting"] }
winreg = "0.10"

[dependencies.ntapi]
version = "0.3"
default-features = false
features = ["user"]

[dependencies.winapi]
version = "0.3"
default-features = false
features = [
    "ntdef", "sysinfoapi", "handleapi", "processthreadsapi", "memoryapi",
    "synchapi", "winnt", "objbase", "combaseapi", "taskschd", "securitybaseapi",
    "wtypesbase", "rpcdce", "wtypes", "oaidl", "oleauto", "unknwnbase",
]

[build-dependencies]
winres = "0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
